--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@
           </div>
           <div class="input-group input-group-full">
             <span class="input-group-button">
-              <button id="applyWhereClause" class="btn esri-button">Apply</button>
+              <button id="applyWhereClause" class="btn esri-button">
+                Apply
+              </button>
             </span>
             <input
               id="expressionFilter"
