--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           );
           on(dojo.byId("toggleStreamLayer"), "click", toggleStreamLayer);
           on(dojo.byId("clearPreviousObservations"), "click", function() {
-            streamLayer.clear();
+            if (streamLayer) streamLayer.clear();
           });
           on(dojo.byId("applyWhereClause"), "click", applyWhereClause);
           on(dojo.byId("applySpatialFilter"), "click", applySpatialFilter);
@@ -104,10 +104,7 @@
             spatialFilter = evt.geometry;
             drawSpatialFilter(spatialFilter);
             if (streamLayer) streamLayer.setGeometryDefinition(spatialFilter);
-            domAttr.remove(
-              dojo.byId("clearSpatialFilter"),
-              "disabled"
-            );
+            domAttr.remove(dojo.byId("clearSpatialFilter"), "disabled");
           });
         }
 
@@ -210,15 +207,12 @@
          *********************************************************/
         function processConnect() {
           dojo.byId("toggleStreamLayer").innerText = "Remove Stream Layer";
-          domAttr.remove(
-            dojo.byId("clearPreviousObservations"),
-            "disabled"
-          );
+          domAttr.remove(dojo.byId("clearPreviousObservations"), "disabled");
         }
 
         function processDisconnect() {
           dojo.byId("toggleStreamLayer").innerText = "Add Stream Layer";
-          domClass.set(
+          domAttr.set(
             dojo.byId("clearPreviousObservations"),
             "disabled",
             "true"
@@ -233,13 +227,16 @@
               msg.filter.hasOwnProperty("where") ||
               msg.filter.hasOwnProperty("geometry")
             ) {
-              console.log(msg.filter.where || "");
               createToaster(
                 "Success",
                 "Successfully updated the filter. \nAttribute Filter: " +
                   (msg.filter.where || "") +
                   "\nSpatial Filter: " +
-                  (msg.filter.geometry || ""),
+                  (msg.filter.geometry
+                    ? typeof msg.filter.geometry === "object"
+                      ? JSON.stringify(msg.filter.geometry)
+                      : msg.filter.geometry
+                    : ""),
                 "green"
               );
             } else {
@@ -270,12 +267,8 @@
         function clearSpatialFilter() {
           spatialFilter = null;
           map.graphics.clear();
-          streamLayer.setGeometryDefinition(null);
-          domAttr.set(
-            dojo.byId("clearSpatialFilter"),
-            "disabled",
-            "true"
-          );
+          if (streamLayer) streamLayer.setGeometryDefinition(null);
+          domAttr.set(dojo.byId("clearSpatialFilter"), "disabled", "true");
         }
 
         function drawSpatialFilter(bbox) {
@@ -347,7 +340,10 @@
             >
           </div>
           <div class="input-group input-group-full">
-            <calcite-button id="clearPreviousObservations" width="full" disabled="true"
+            <calcite-button
+              id="clearPreviousObservations"
+              width="full"
+              disabled="true"
               >Clear Previous Observations</calcite-button
             >
           </div>
@@ -367,9 +363,7 @@
               <calcite-button id="applySpatialFilter" class="prev-element"
                 >Apply Spatial Filter</calcite-button
               >
-              <calcite-button
-                id="clearSpatialFilter"
-                disabled="true"
+              <calcite-button id="clearSpatialFilter" disabled="true"
                 >Clear Spatial Filter</calcite-button
               >
             </div>
