Renamed file and added unsubscribe button

--- a/latestViewer.html
+++ b/latestViewer.html
@@ -362,6 +362,14 @@
             >
           </div>
           <div class="input-group input-group-full">
+            <calcite-button 
+              id="subscribeUnsubscribe"
+              width="full" 
+              disabled="true"
+              >Unsubscribe</calcite-button
+            >
+          </div>
+          <div class="input-group input-group-full">
             <calcite-input
               id="expressionFilter"
               type="text"
