Added clear previous observation button

--- a/latestViewer.html
+++ b/latestViewer.html
@@ -337,6 +337,14 @@
             >
           </div>
           <div class="input-group input-group-full">
+            <calcite-button 
+              id="clearPreviousObservations"
+              width="full" 
+              disabled="true"
+              >Clear Previous Observations</calcite-button
+            >
+          </div>
+          <div class="input-group input-group-full">
             <calcite-input
               id="expressionFilter"
               type="text"
