--- a/classicViewer.html
+++ b/classicViewer.html
@@ -111,7 +111,7 @@
             domAttr.remove(dojo.byId("clearSpatialFilter"), "disabled");
           });
           on(dojo.byId("switchViewer"), "click", function() {
-            window.location.href = "./latestViewer.html";
+            window.location.href = "./currentViewer.html";
           });
         }
 
@@ -414,7 +414,7 @@
       <calcite-button
         id="switchViewer"
         style="position: absolute; bottom: 0; right: 0; z-index: 1; margin: 5px;"
-        >Switch to Latest Viewer</calcite-button
+        >Switch to Current Viewer</calcite-button
       >
     </div>
   </body>
